# imapnotify-rs

./: Cargo.toml  LICENSE-MIT  README.md  imapnotify.toml
src/: main.rs
